tests/error/type_errors/unpack_generic_size.err
Error: Too many values to unpack (at $FILE:10:4)
   | 
 8 | @guppy
 9 | def foo(xs: array[int, n]) -> int:
10 |     a, *bs = xs
   |     ^^^^^^ Unexpected assignment target (expected 0, got at least 1)

Note: Error occurred while checking the instantiation `n := 0`

Guppy compilation failed due to 1 previous error
